--- a/src/components/fetchjokes.css
+++ b/src/components/fetchjokes.css
@@ -4,13 +4,16 @@
 
 }
 .fetch__jokes {
+    display: flex;
     width: 100%px;
+    margin-left: 30px;
+    margin-top: 5px;
 
 }
 .jokes__container {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 75%;
 
 }
 .select__option {
